<resources>
    <string name="app_name">Final Submission - Kelola Data</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorite">Favorite</string>

    <string name="content_poster">Content Poster</string>
    <string name="content_title">Content Title</string>
    <string name="content_date">Content Date</string>
    <string name="content_overview">Content Overview</string>
    <string name="overview">Overview</string>
    <string name="curve">Curve</string>
</resources>
